--- a/app/src/main/res/drawable/ic_baseline_add_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_add_24.xml
@@ -3,8 +3,7 @@
     android:height="24dp"
     android:width="24dp"
     android:viewportHeight="24"
-    android:viewportWidth="24"
-    android:tint="#FFFFFF">
+    android:viewportWidth="24">
 
     <path
         android:fillColor="?attr/colorOnSecondary"
