--- a/app/src/main/res/drawable/ic_baseline_add_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_add_24.xml
@@ -1,9 +1,10 @@
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
     android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
     android:viewportHeight="24"
-    android:viewportWidth="24">
+    android:tint="?attr/colorControlNormal">
 
     <path
         android:fillColor="?attr/colorOnSecondary"
