Completion of Lab №2

--- a/app/src/main/res/layout/fragment_order_item.xml
+++ b/app/src/main/res/layout/fragment_order_item.xml
@@ -25,6 +25,13 @@
             android:layout_margin="@dimen/text_margin"
             tools:text="Guests number: Unknown"/>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
+            tools:text="@string/open_document" />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.core.widget.NestedScrollView>
