--- a/app/src/main/res/menu/order_item_menu.xml
+++ b/app/src/main/res/menu/order_item_menu.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/order_item_document"
+        android:enabled="true"
+        android:icon="@drawable/round_description_24"
+        android:title="@string/order_document"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/order_item_share"
         android:enabled="true"
         android:icon="@drawable/round_share_24"
