--- a/app/src/main/res/menu/order_item_menu.xml
+++ b/app/src/main/res/menu/order_item_menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/order_item_document"
         android:enabled="true"
@@ -14,4 +16,5 @@
         android:icon="@drawable/round_share_24"
         android:title="@string/share"
         app:showAsAction="always" />
+
 </menu>
