--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_margin">8dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
     <dimen name="list_item_margin">8dp</dimen>
+
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="top_margin">16dp</dimen>
+    <dimen name="search_margin">32dp</dimen>
 </resources>
